Fixed social icon alignment

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ nav > a:hover {
   margin-right: 5px;
 }
 
+.social a img {
+  vertical-align: initial;
+}
+
 .video-container {
   height: calc(100vh - 85px);
   background-color: #000;
